fixed resize handle being positioned behind the shadow preventing the components from being propertly resized

--- a/public/css/jqueryui-override.css
+++ b/public/css/jqueryui-override.css
@@ -14,6 +14,7 @@
     display:none;
 }
 .ui-resizable-handle {
+     z-index: 10;
     background-color: #333;
     outline: 1px solid white;
 }
