--- a/public/css/shadow.css
+++ b/public/css/shadow.css
@@ -4,4 +4,5 @@
     background-repeat: no-repeat;
     position: absolute;
     left: 0;
+    z-index: 1;
 }
